[REFACTOR]: 반복 코드 메서드 분리